# search-docs

./: .gitignore  .mcp.json  .npmrc  .search-docs.json  AGENTS.md  CHANGELOG.md  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  tsconfig.json
.changeset/: 1762651586-duckdb-integration.md  a39aa1f7-index-strategy.md  fix-mcp-server-version.md  memory-leak-fix.md  parcel-watcher-migration.md  table-handle-caching.md  task14-search-result-improvements.md  task17-test-fixes.md
docs/: README.md  architecture-decisions.md  architecture.md  cli-reference.md  client-library.md  client-server-architecture.md  data-model.md  file-watcher-design.md  hierarchical-content-issue.md  implementation-details.md  markdown-splitter-design.md  mcp-integration.md  quick-start.md  server-process-management.md  type-definitions.md  user-guide.md
docs/adr/: 001-cli-server-process-management.md
prompts/: CHANGESET.md  README.md  SEARCH_DOCS.md
prompts/tasks/: .gitkeep  PENDING_TASKS.md  memory-analysis-facts-vs-speculation.md  memory-leak-investigation.md  research-report.section-type-structure.v1.md  research.config-startup.v1.md  session-closing-2025-10-30.md  session-closing-2025-10-31.md  task001.dist-src-structure.v1.md  task1.implementation-plan.v1.md  task1.progress-memo.md  task10.port-config-and-auto-start.v1.md  task11.cli-improvements.v1.md  task11.config-loader-refactoring.v1.md  task12.testing-and-release.v1.md  task13.bug-fixes-and-improvements.v1.md  task14.search-result-improvements.v2.md  task20.research.md  (+27 more)
