[project]
name = "search-docs"
version = "0.1.0"
description = "ローカル文書検索システム - Markdown文書に対するVector検索機能を提供"
requires-python = ">=3.11"
dependencies = [
    "lancedb>=0.5.0",
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
    "protobuf>=4.0.0",
    "sentencepiece>=0.1.99",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
]
